[package]
name = "rill-json"
version = "0.3.0"
edition = "2021"
authors = ["Louis-Philip Marcoux <louisphilipmarcoux@gmail.com>"]

description = "A fast, 100% safe, and RFC 8259-compliant streaming JSON parser and serializer, built from scratch in Rust."

readme = "README.md"

repository = "https://github.com/louisphilipmarcoux/rill-json"

license = "MIT OR Apache-2.0"

keywords = ["json", "parser", "streaming", "serializer", "no_unsafe"]

categories = ["parsing", "encoding"]

rust-version = "1.81.0"

[lib]
name = "rill_json" # The name for `use rill_json`
path = "src/lib.rs"

[[bin]]
name = "rill_json_bin"
path = "src/main.rs"

[dependencies]
# Your parser's only dependency!
memchr = "2.7"

# Dependencies for testing, benchmarking, and fuzzing
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parser_bench"
harness = false